# badPlayerMax

./: .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  Globals.cpp  Globals.h  main.cpp
OpenGLSomethingFrameDisplayerEVO/: CMakeLists.txt  GlobalThreadPool.h  GlobalVectorPool.h  OpenGLSomethingFrameDisplayerEVO.cpp  OpenGLSomethingFrameDisplayerEVO.h
OpenGLSomethingFrameDisplayerEVO/ThreadPool/: Task.h  ThreadPool.cpp  ThreadPool.h
OpenGLSomethingFrameDisplayerEVO/VectorPool/: VectorPool.h
OpenGLSomethingFrameDisplayerEVO/imgui/: imgui_impl_glfw.h
OpenGLSomethingFrameDisplayerEVO/renderer/: ArrayObject.cpp  ArrayObject.h  BufferObject.cpp  BufferObject.h  Frustum.cpp  Frustum.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
OpenGLSomethingFrameDisplayerEVO/renderer/GraphicalDataBuffers/: BlocksGraphicalDataBuffer.cpp  BlocksGraphicalDataBuffer.h
OpenGLSomethingFrameDisplayerEVO/renderer/lighting/: Lights.h
OpenGLSomethingFrameDisplayerEVO/videoCore/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameInitialisation.cpp  GameRendering.cpp  GameUI.cpp  InputManager.cpp  InputManager.h
OpenGLSomethingFrameDisplayerEVO/videoWorld/: VideoWorld.cpp  VideoWorld.h
OpenGLSomethingFrameDisplayerEVO/videoWorld/block/: Block.h  BlockMeshGenerator.cpp  BlockMeshGenerator.h  BlocksManager.cpp  BlocksManager.h
OpenGLSomethingFrameDisplayerEVO/videoWorld/chunk/: ChunkInstance.cpp  ChunkInstance.h
OpenGLSomethingFrameDisplayerEVO/videoWorld/chunk/generation/: ChunkGenerator.cpp  ChunkGenerator.h
OpenGLSomethingFrameDisplayerEVO/videoWorld/chunk/math/: PerlinNoise.hpp
OpenGLSomethingFrameDisplayerEVO/videoWorld/chunk/model/: Chunk.cpp  Chunk.h
OpenGLSomethingFrameDisplayerEVO/videoWorld/chunk/rendering/: ChunkGraphicalData.h  ChunkMeshGenerator.cpp  ChunkMeshGenerator.h  RayCaster.h
src/: Globals.cpp  Globals.h  main.cpp
src/videoPlayer/: audio_clock.h  demuxer.cpp  demuxer.h  media_payer.cpp  media_player.h  shared_data.h  video_decoder.cpp  video_decoder.h
videoPlayer/: audio_clock.cpp  audio_decoder.cpp  audio_decoder.h  frame_types.h  media_payer.cpp  video_decoder.cpp
